# credit-modeling-agent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  cross_feature_pipeline_screen.py  docker-compose.yml  main.py  pyproject.toml
agents/: __init__.py  compliance_agent.py  data_agent.py  deploy_agent.py  effect_agent.py  feature_agent.py  interpret_agent.py  model_agent.py  model_report_agent.py  monitor_agent.py  param_tune_agent.py  performance_agent.py  project_agent.py  regulatory_report_agent.py  sample_split_agent.py  visualization_agent.py
assets/css/: custom.css
transformer_optuna_binclf/: train_optuna_transformer.py
utils/: auth_utils.py  io_utils.py  metric_utils.py
