[project]
name = "credit-modeling-agent"
version = "1.0.0"
description = "信贷建模Agent可视化系统"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "greenlet==3.0.3",
    "streamlit>=1.35.0",
    "polars>=0.20.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "catboost>=1.2.0",
    "torch>=2.1.0",
    "optuna>=3.4.0",
    "shap>=0.44.0",
    "plotly>=5.18.0",
    "streamlit-echarts>=0.4.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0",
    "streamlit-authenticator>=0.3.0",
    "python-docx>=1.1.0",
    "weasyprint>=59.0",
    "pymysql>=1.1.0",
    "clickhouse-connect>=0.6.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "scipy>=1.11.4",
    "statsmodels>=0.14.1",
    "toad>=0.1.2",
]

[tool.uv]
